# cas-paxos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all_logs.txt  basic-ops.cc  evaluation.md  perf_annotate.txt  perf_report.txt  promise_report.txt
config/: cloudlab.conf  romulus.conf
dyno/: cas_paxos_st.cc  cas_paxos_st.h  paxos.cc  paxos_test.cc
experiments/: CMakeLists.txt  caspaxos.cc  simple.cc
include/: aparray.h  cas_paxos_impl.h  cas_paxos_st.h  cfg.h  state.h  util.h
include/mu/: mu_impl.h
include/velos/: velos_impl.h  velos_mt.h
plots/: failover.py  make_plot_2.py  make_plots.py  make_plots_3.py
src/: aux.cc  catchup.cc  failure_detector.cc  init.cc  prepare.cc  promise.cc  propose.cc
tools/: all_logs.txt  build.sh  cl.sh  commit.sh  nohup.out  perf_report_9.txt  perf_stat_9.txt
tools/experiments/: failover.sh
